# cybertron

./: .gitignore  App.tsx  CHANGELOG.md  CLAUDE.md  DESIGN.md  GESTURE_REWRITE.md  Makefile  PARTS.md  README.md  app.json  architecture.md  debug.md  log.h  package-lock.json  package.json  pyproject.toml  shake_detector.h  wristturn.ino  wristturn.sparkfun.bak
writstturn_adapter/: README.md  pyproject.toml
writstturn_adapter/src/wristturn/: __init__.py
writstturn_adapter/src/wristturn/adapters/: daemon.py  macos_receiver.py
writstturn_adapter/src/wristturn/collector/: dashboard.html  index.html  preprocess.py  server.py
writstturn_adapter/src/wristturn/collector/captures/A/: rec_1775463474213.json  rec_1775485131269.json
writstturn_adapter/src/wristturn/collector/captures/B/: rec_1775463514648.json
writstturn_adapter/src/wristturn/collector/captures/C/: rec_1775463527466.json
writstturn_adapter/src/wristturn/collector/captures/D/: rec_1775463536911.json
writstturn_adapter/src/wristturn/collector/captures/E/: rec_1775463545740.json
writstturn_adapter/src/wristturn/collector/captures/F/: rec_1775463554947.json
writstturn_adapter/src/wristturn/collector/captures/d/: rec_1775294889156.json
writstturn_adapter/src/wristturn/collector/captures/extra/RotateL/: rec_1775298758762.json
writstturn_adapter/src/wristturn/collector/captures/extra/RotateLR/: rec_1775298752933.json  rec_1775298953288.json  rec_1775298997434.json
writstturn_adapter/src/wristturn/collector/captures/extra/RotateLRL/: rec_1775299005900.json
writstturn_adapter/src/wristturn/collector/captures/extra/RotateR/: rec_1775298776983.json
writstturn_adapter/src/wristturn/collector/captures/extra/RotateRL/: rec_1775298738593.json  rec_1775298929549.json  rec_1775298938217.json  rec_1775298988375.json
writstturn_adapter/src/wristturn/collector/captures/extra/RotateRLR/: rec_1775298908693.json  rec_1775298978969.json
writstturn_adapter/src/wristturn/collector/captures/extra/Swipe/: rec_1775298544426.json
writstturn_adapter/src/wristturn/collector/captures/g/: rec_1775294931266.json
writstturn_adapter/src/wristturn/collector/captures/h/: rec_1775294940103.json
writstturn_adapter/src/wristturn/collector/captures/o/: rec_1775295029168.json
writstturn_adapter/src/wristturn/collector/captures/unlabelled/: rec_1775294009678.json  rec_1775294530442.json
writstturn_adapter/src/wristturn/collector/captures/v1/Inf2/: rec_1775292712485.json
(+336 files in other folders)
